force-app/main/default/objects/SFDC_MDF__c/SFDC_MDF__c.object-meta.xml
<CustomObject>
    <description>Track Grant request details including partner account, requested amount, activity type and date, and approval status.</description>
    <label>Grant Request</label>
    <nameField>
        <displayFormat>REQ-{000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>