force-app/main/default/objects/SFDC_MDF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner account making the MDF request</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000002DjDDEA0</relationshipName>
    <type>Lookup</type>
</CustomField>