force-app/main/default/objects/SFDC_MDF__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>A list of available activity types. Customize as needed.</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Course Fees</fullName>
            </value>
            <value>
                <fullName>Registration Fees</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>