force-app/main/default/objects/SFDC_MDF__c/fields/CC_Product__c.field-meta.xml
<CustomField>
    <fullName>CC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Course to be registered</description>
    <label>CC Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ccrz__E_Product__c.CC_Category__r.Name</field>
            <operation>equals</operation>
            <value>Caregiving Scheduling</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Grant Requests</relationshipLabel>
    <relationshipName>Grant_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>