force-app/main/default/objects/SFDC_MDF__c/fields/Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome__c</fullName>
    <description>Have the partner state what they want to accomplish from this request/ marketing activity</description>
    <label>Desired Outcome</label>
    <type>TextArea</type>
</CustomField>