force-app/main/default/objects/SFDC_MDF__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>