force-app/main/default/objects/SFDC_MDF__c/fields/learner_Age__c.field-meta.xml
<CustomField>
    <fullName>learner_Age__c</fullName>
    <formula>FLOOR((TODAY()-Learner__r.Birthdate)/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>learner Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>