force-app/main/default/objects/SFDC_MDF__c/fields/Learner_City__c.field-meta.xml
<CustomField>
    <fullName>Learner_City__c</fullName>
    <formula>Learner__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner City</label>
    <type>Text</type>
</CustomField>