force-app/main/default/objects/SFDC_MDF__c/fields/Learner_Gender__c.field-meta.xml
<CustomField>
    <fullName>Learner_Gender__c</fullName>
    <formula>Text( Learner__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner Gender</label>
    <type>Text</type>
</CustomField>