force-app/main/default/objects/SFDC_MDF__c/fields/Learner_Race__c.field-meta.xml
<CustomField>
    <fullName>Learner_Race__c</fullName>
    <formula>Text( Learner__r.Race__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner Race</label>
    <type>Text</type>
</CustomField>