force-app/main/default/objects/SFDC_MDF__c/fields/Learner_State__c.field-meta.xml
<CustomField>
    <fullName>Learner_State__c</fullName>
    <formula>Learner__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner State</label>
    <type>Text</type>
</CustomField>