force-app/main/default/objects/SFDC_MDF__c/fields/Learner_Zip__c.field-meta.xml
<CustomField>
    <fullName>Learner_Zip__c</fullName>
    <formula>Learner__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner Zip</label>
    <type>Text</type>
</CustomField>