force-app/main/default/objects/SFDC_MDF__c/fields/Other_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Activity_Type__c</fullName>
    <description>Used when the user chooses &#39;other&#39; as the activity type</description>
    <label>Other Activity Type</label>
    <type>TextArea</type>
</CustomField>