force-app/main/default/objects/SFDC_MDF__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>The intended target audience for the fund request</description>
    <label>Target Audience</label>
    <type>TextArea</type>
</CustomField>