force-app/main/default/objects/SFDC_MDF__c/validationRules/Amount_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Limits</fullName>
    <active>true</active>
    <description>Incorporate limits on the requested amount</description>
    <errorConditionFormula>OR(     Amount__c &lt; 0,    Amount__c &gt; 50000 )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The amount requested must be between $0 and $50,000</errorMessage>
</ValidationRule>