force-app/main/default/objects/SFDC_MDF__c/validationRules/Require_Other_Activity_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Activity_Type</fullName>
    <active>true</active>
    <description>Used to force the user to choose fill in the &#39;other activity type&#39; when &#39;other&#39; is chosen as the activity type.</description>
    <errorConditionFormula>AND(ISPICKVAL( Activity_Type__c, &quot;Other&quot;), LEN(Other_Activity_Type__c )=0)</errorConditionFormula>
    <errorDisplayField>Other_Activity_Type__c</errorDisplayField>
    <errorMessage>Please provide details on the &#39;Other&#39; activity type.</errorMessage>
</ValidationRule>